# usb-fm-radio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Initialize-Submodules.ps1  README.md  STM32F042XX_FLASH.ld  readme.md  usb-fm-radio.code-workspace
.github/: copilot-instructions.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Firmware.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 3.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Firmware/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Firmware/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Firmware/.indexes/af/: history.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Core/Inc/: dma.h  gpio.h  main.h  stm32f0xx_it.h
Core/Src/: dma.c  stm32f0xx_it.c  sysmem.c  tim.c
Firmware/: .clang-format  .cproject  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Firmware.ioc  Firmware.launch  README.md  STM32F042C6TX_FLASH.ld
Firmware/.github/: copilot-instructions.md
Firmware/Core/: i2c.c  i2s.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  syscalls.c  system_stm32f0xx.c  tim.c  tim.h
Firmware/Core/Inc/: dma.h  gpio.h  i2c.h  i2s.h  main.h  si4705.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  usb_device.h
Firmware/Core/Src/: dma.c  gpio.c  i2c.c  i2s.c  main.c  si4705.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  syscalls.c  sysmem.c  system_stm32f0xx.c  tim.c  usb_device.c
Firmware/Core/Startup/: startup_stm32f042c6tx.s
Firmware/Include/: CMakeLists.txt  SharedHeadersConfig.cmake.in  constants.h  reports.h
Firmware/Radio/: commands.c  commands.h  common.h  device.c  device.h  properties.c  properties.h  rds.c  rds.h
Firmware/Radio/Inc/: commands.h  common.h  device.h  si4705.h
Firmware/Radio/Src/: commands.c  device.c  si4705.c
Firmware/USB/: audio_callbacks.c  audio_config.h  hid_callbacks.c  hid_config.h  tusb_config.h  usb_descriptors.c
Firmware/USB/Class/CustomHID/Inc/: usbd_customhid.h
Firmware/USB/Class/CustomHID/Src/: usbd_customhid.c
Firmware/USB/Class/RADIO/Inc/: usbd_radio.h
Firmware/USB/Class/RADIO/Src/: temp.txt  usbd_radio.c
Firmware/USB/Core/Inc/: usbd_conf.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_desc.h  usbd_ioreq.h
Firmware/USB/Core/Src/: usbd_core.c  usbd_ctlreq.c  usbd_desc.c  usbd_ioreq.c
Firmware/USB/Inc/: audio_config.h  hid_config.h  tusb_config.h  usb_descriptors.h  usbd_conf.h  usbd_desc.h  usbd_radio.h
Firmware/USB/Src/: audio_callbacks.c  hid_callbacks.c  usb_descriptors.c  usb_device.c  usbd_conf.c  usbd_desc.c  usbd_radio.c
Firmware/cmake/: gcc-arm-none-eabi.cmake
Firmware/cmake/stm32cubemx/: CMakeLists.txt
GUI/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  README.md  main.cpp
GUI/.github/: copilot-instructions.md
GUI/components/: CMakeLists.txt  DigitalDisplay.qml  GlowingText.qml  GradientBar.qml  Main.qml  ModernButton.qml  PowerButton.qml  RDSPanel.qml  SignalIndicators.qml  SignalSection.qml  StereoIndicator.qml  TitleBar.qml  TunerDial.qml
GUI/resources/: CMakeLists.txt
GUI/src/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  DeviceWorker.cpp  DeviceWorker.h  ReportWorker.cpp  ReportWorker.h  Reports.h  main.cpp  tunercontrol.cpp  tunercontrol.h
Radio/Inc/: commands.h  common.h
Radio/Src/: commands.c
Schematics/: .gitignore  README.md  fp-lib-table  radio-circuit-bom.csv  radio-circuit-pos.csv  radio-circuit.kicad_pcb  radio-circuit.kicad_prl  radio-circuit.kicad_pro  radio-circuit.kicad_sch  radio-circuit.kicad_sym  sym-lib-table
Schematics/BWSMA-KE-Z001.pretty/: SMA_BAT_Wireless_BWSMA-KE-Z001.kicad_mod
Schematics/Local.pretty/: SMA_BAT_Wireless_BWSMA-KE-Z001.kicad_mod  SMA_BAT_Wireless_BWSMA-KE-Z001.step
USB/Inc/: hid_config.h
cmake/: gcc-arm-none-eabi.cmake  gcc-mingw-windows-pc.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
